# NESSA_MonteCarlo

./: .gitignore  CMakeLists.txt  README.md  main.cc
NESSA_Simplified_act/: CMakeLists.txt  README.md  analyze_spectra.py  build_and_run.sh  nessa_sim.cc
NESSA_Simplified_act/include/: NESSAActionInitialization.hh  NESSADetectorConstruction.hh  NESSADetectorMessenger.hh  NESSADoseCalculator.hh  NESSAEventAction.hh  NESSANeutronHit.hh  NESSANeutronSD.hh  NESSAPhysicsList.hh  NESSAPrimaryGeneratorAction.hh  NESSARunAction.hh  NESSAScoringConfig.hh  NESSASteppingAction.hh
NESSA_Simplified_act/macros/: detectors.mac  gps_source.mac  init_vis.mac  plot_nessa.C  run.mac  vis.mac  vis_raytracer.mac
NESSA_Simplified_act/src/: NESSAActionInitialization.cc  NESSADetectorConstruction.cc  NESSADetectorMessenger.cc  NESSAEventAction.cc  NESSANeutronHit.cc  NESSANeutronSD.cc  NESSAPhysicsList.cc  NESSAPrimaryGeneratorAction.cc  NESSARunAction.cc  NESSASteppingAction.cc
include/: NESSAActionInitialization.hh  NESSADetectorConstruction.hh  NESSADetectorMessenger.hh  NESSAPrimaryGeneratorAction.hh  NESSARunAction.hh  NESSAScoringConfig.hh  NESSAScoringSD.hh  NESSASteppingAction.hh
macros/: detectors.mac  init_vis.mac  plot_results.C  run.mac  scorers.mac  vis.mac
src/: NESSAActionInitialization.cc  NESSADetectorConstruction.cc  NESSADetectorMessenger.cc  NESSAPrimaryGeneratorAction.cc  NESSARunAction.cc  NESSAScoringSD.cc  NESSASteppingAction.cc
